--- a/app/templates/erc360/ownership.html
+++ b/app/templates/erc360/ownership.html
@@ -18,6 +18,12 @@
   </header>
   <section id="ownership-content" class="modal-card-body has-text-centered">
       <canvas id="myChart"></canvas>
+      {% if erc360.token_ids.count() == 0 %}
+      <p> No tokens minted yet... </p>
+      {% endif %}
+      {% if current_user.has_wallet_with_permit(erc360,"5ce8495784c6f4e78c600137ac8c674936aae3e1ffbcf8860e850a93d83c928f") %}
+      <button>MINT</button>
+      {% endif %}
   </section>
 </div>
 </div>
