--- a/app/templates/erc360/ownership.html
+++ b/app/templates/erc360/ownership.html
@@ -17,12 +17,13 @@
     </p>
   </header>
   <section id="ownership-content" class="modal-card-body has-text-centered">
-      <canvas id="myChart"></canvas>
       {% if erc360.token_ids.count() == 0 %}
-      <p> No tokens minted yet... </p>
+      <div style="height: 400px;"><p style="height:400px;line-height:400px;">No tokens minted yet...</p></div>
+      {% else %}
+      <canvas id="myChart"></canvas>
       {% endif %}
       {% if current_user.has_wallet_with_permit(erc360,"5ce8495784c6f4e78c600137ac8c674936aae3e1ffbcf8860e850a93d83c928f") %}
-      <button>MINT</button>
+      <button class="button is-success is-rounded" id="mint-button">MINT</button>
       {% endif %}
   </section>
 </div>
