--- a/app/templates/erc360/mint.html
+++ b/app/templates/erc360/mint.html
@@ -20,15 +20,15 @@
           </a>
         </p>
       <p class="control">
-        <input id="mint-amount-input" class="input" type="text" placeholder="Amount to mint" min="1" max="{{2**256-1}}">
+        <input id="mint-amount-input" class="input" type="text" placeholder="Amount to mint" min="1" max="{{2**256-1}}" maxlength="78">
       </p>
     </div>
     <div class="field">
       <p class="control">
-        <progress id="mint-amount-progress-bar" class="progress" value="20" max="{{erc360.log_max_supply}}">Ay</progress>
+        <progress id="mint-amount-progress-bar" class="progress" value="{{erc360.log_total_supply}}" max="{{erc360.log_max_supply}}">Ay</progress>
       </p>
       <p class="control">
-        <span id="mint-amount-span" class="text" style="float:left;">{{erc360.total_supply or 0}}</span>
+        <span id="mint-amount-span" class="text" style="float:left;" data-original-amount='{{erc360.total_supply or 0}}'>{{erc360.total_supply or 0}}</span>
         <span class="text" style="float:right;">2<sup>{{erc360.log_max_supply}}</sup>-1</span>
       </p>
   </div>
