--- a/app/templates/erc360/profile.html
+++ b/app/templates/erc360/profile.html
@@ -70,6 +70,7 @@
 <script src="/static/js/erc360/structure.js"></script>
 <link rel="stylesheet" href="/static/css/profile/profile.css">
 <link rel="stylesheet" href="/static/css/erc360/erc360.css">
+<link rel="stylesheet" href="/static/css/erc360/mint.css">
 <link rel="stylesheet" href="/static/css/extras/entity.css">
 <link rel="stylesheet" href="/static/css/profile/mini-profile.css">
 <link rel="stylesheet" href="/static/css/profile/edit.css">
