controlled mint inputs

--- a/app/templates/erc360/mint.html
+++ b/app/templates/erc360/mint.html
@@ -10,7 +10,6 @@
       <p class="modal-card-title" id="header">Mint {{erc360.name}}</p>
   </header>
   <section id="mint-content" class="modal-card-body has-text-centered">
-      <div>
     <div id="amount">
       <h1><b>Amount</b></h1>
       <div class="field has-addons has-addons-centered">
@@ -49,7 +48,7 @@
         <div class="message"></div>
       </div>
       <br id="recipient-anchor">
-    </div>
+      <button id="mint" class="button is-success" disabled>MINT</button>
   </section>
 </div>
 </div>
