--- a/app/templates/erc360/ownership.html
+++ b/app/templates/erc360/ownership.html
@@ -20,9 +20,10 @@
       {% if erc360.token_ids.count() == 0 %}
       <div style="height: 400px;"><p style="height:400px;line-height:400px;">No tokens minted yet...</p></div>
       {% else %}
-      <canvas id="myChart"></canvas>
+      <canvas id="erc360-ownership-chart"></canvas>
       {% endif %}
       {% if current_user.has_wallet_with_permit(erc360,"5ce8495784c6f4e78c600137ac8c674936aae3e1ffbcf8860e850a93d83c928f") %}
+      <br>
       <button class="button is-success is-rounded" id="mint-button">MINT</button>
       {% endif %}
   </section>
