--- a/app/templates/erc360/structure.html
+++ b/app/templates/erc360/structure.html
@@ -26,42 +26,65 @@
       </ul>
     </div>
     <div id="structure-tabs-content">
-    <div id="banks-tab" class="structure-tab-content" style="height: 400px;">
+    <div id="banks-tab" class="structure-tab-content" style="height: 400px;display: flex; flex-direction: column;">
       {% if erc360.banks.count() > 0 %}
-      <div class="select is-fullwidth" style="margin-bottom:10px;">
-        <select>
+      <div class="field has-addons" style="margin: 0px;">
+        <p class="control">
+          <a class="button is-static" style="border-bottom-width: 0px;border-bottom-left-radius: 0px;border-bottom-right-radius: 0px;">
+            Bank
+          </a>
+        </p>
+        <p class="control">
+      <div class="select is-fullwidth">
+        <select style="border-bottom-width: 0px;border-bottom-left-radius: 0px;border-bottom-right-radius: 0px;">
           {% for bank in erc360.banks %}
           <option>{{bank.representation}}</option>
           {% endfor %}
         </select>
       </div>
+      </p>
+      </div>
       <div class="table-container">
-        <table class="table is-bordered is-narrow is-hoverable is-fullwidth">
+        <table class="table is-bordered is-narrow is-striped is-hoverable is-fullwidth">
           {% for token_amount in erc360.banks.first().token_amounts %}
           <tr>
-            <td><a href="{{token_amount.token.etherscan_url}}" target="_blank">{{token_amount.token.representation}}</a></td>
+            <td><a href="{{token_amount.token.etherscan_url}}" target="_blank">{{token_amount.token.name}}</a></td>
             <td>{{token_amount.representation}}</td>
           </tr>
           {% endfor %}
         </table>
+      </div>
+      <div class="field is-grouped is-grouped-centered" style="margin: auto;">
+        <p class="control">
+          <a class="button is-success is-light">
+            Deposit
+          </a>
+        </p>
+        {% if current_user.has_wallet_with_permit(erc360,"0000000000000000000000000000000000000000000000000000000000000000") %}
+        <p class="control">
+          <a class="button is-link is-light">
+            Transfer
+          </a>
+        </p>
+        {% endif %}
       </div>
       {% else %}
       <div style="height: 400px;"><p style="height:400px;line-height:400px;">No banks created yet...</p></div>
       {% endif %}
     </div>
     <div id="permits-tab" class="structure-tab-content vanish" style="height: 400px;">
-      <div class="select is-fullwidth">
-        <select>
-          <option>Implement Proposals</option>
-          <option>Issue Votes</option>
-          <option>Issue Shards</option>
-          <option>Liquidize Entity</option>
-          <option>Manage Acceptable Tokens</option>
-          <option>Manage Banks</option>
-          <option>Manage Dividends</option>
-        </select>
+      <div class="field has-addons" style="margin: 0px;">
+        <p class="control"><a class="button is-static" style="border-bottom-width: 0px;border-bottom-left-radius: 0px;border-bottom-right-radius: 0px;">Permit</a></p>
+        <p class="control">
+          <div class="select is-fullwidth">
+            <select style="border-bottom-width: 0px;border-bottom-left-radius: 0px;border-bottom-right-radius: 0px;">
+              {% for permit in erc360.permits %}
+              <option>{{permit.representation}}</option>
+              {% endfor %}
+            </select>
+          </div>
+        </p>
       </div>
-      <br>
         <table class="table is-striped is-bordered is-fullwidth">
           <tr><td>
           <span class='icon'><i class='fa-solid fa-chess-king'></i></span>
@@ -72,15 +95,45 @@
           <span class="text">Theo (03x00fe40t2303d0)</span>
           </td></tr>
 
+          {% with permit=erc360.permits.first() %}
+          {% for wallet in permit.wallets %}
+          <tr><td>
+            <span class='icon'>
+            {% if wallet in permit.parent.wallets %}
+            <i class='fa-solid fa-chess-king'></i>
+            {% else %}
+            <i class='fa-solid fa-chess-bishop'></i>
+            {% endif %}
+            </span>
+            <span class="text">{{wallet.representation}}</span>
+          {% endfor %}
+          </td></tr>
+          {% endwith %}
         </table>
     </div>
     <div id="dividends-tab" class="structure-tab-content vanish" style="height: 400px;">
+      {% if erc360.dividends.count() > 0 %}
       <span class="text" style="float:left;">#1</span>
       <progress class="progress is-success" value="75" max="100" style="margin-bottom:0px;">75%</progress>
       <span class="text" style="float:right;">75/100 ETH</span>
       <span class="text" style="float:left;margin-top:15px;">#0</span>
       <progress class="progress is-success" value="0" max="100" style="margin-bottom:0px;">0%</progress>
       <span class="text" style="float:right;">0/100 USDC</span>
+      {% else %}
+      <div style="height: 400px;"><p style="height:400px;line-height:400px;">No dividends issued yet...</p></div>
+      {% endif %}
+    </div>
+    <div id="referendums-tab" class="structure-tab-content vanish" style="height: 400px;">
+      {% if erc360.dividends.count() > 0 %}
+      <span class="text" style="float:left;">#1</span>
+      <progress class="progress is-success" value="75" max="100" style="margin-bottom:0px;">75%</progress>
+      <span class="text" style="float:right;">75/100 ETH</span>
+      <span class="text" style="float:left;margin-top:15px;">#0</span>
+      <progress class="progress is-success" value="0" max="100" style="margin-bottom:0px;">0%</progress>
+      <span class="text" style="float:right;">0/100 USDC</span>
+      {% else %}
+      <div style="height: 400px;"><p style="height:400px;line-height:400px;">No referendums issued yet...</p></div>
+      {% endif %}
     </div>
 </div>
   </section>
