ether receivable erc360

--- a/app/templates/erc360/profile.html
+++ b/app/templates/erc360/profile.html
@@ -10,7 +10,7 @@
       </div>
       <div id="profile-left-bottom">
         <p class="title is-4 selectable" style="color:black"><b>{{ erc360.name }}</b></p>
-        <p class="subtitle is-6 selectable" style="color:gray">{{ erc360.address }}</p>
+        <p id="erc360-address" class="subtitle is-6 selectable" style="color:gray">{{ erc360.address }}</p>
       </div>
     </div>
 
