--- a/app/templates/erc360/structure.html
+++ b/app/templates/erc360/structure.html
@@ -52,7 +52,7 @@
       </ul>
     </div>
       <div class="table-container">
-        <table class="table is-bordered is-narrow is-striped is-hoverable is-fullwidth">
+        <table id="bank-balances" class="table is-bordered is-narrow is-striped is-hoverable is-fullwidth">
           {% for token_amount in erc360.banks.first().token_amounts %}
           <tr>
             <td><a href="{{token_amount.token.etherscan_url}}" target="_blank">{{token_amount.token.name}}</a></td>
@@ -133,7 +133,7 @@
    <footer class="modal-card-foot" style="background-color: white;height:80px;">
       <div class="field is-grouped is-grouped-centered" style="margin: auto;">
         <p class="control">
-          <a class="button is-success is-light">
+          <a id="deposit-button" class="button is-success is-light">
             Deposit
           </a>
         </p>
