--- a/app/templates/erc360/structure.html
+++ b/app/templates/erc360/structure.html
@@ -1,4 +1,4 @@
-<div class="modal is-active">
+<div id="structure-modal" class="modal is-active">
 <div class="modal-background"></div>
 <div class="modal-card noselect">
   <header class="modal-card-head">
