deposit input handling

--- a/app/templates/erc360/profile.html
+++ b/app/templates/erc360/profile.html
@@ -453,6 +453,12 @@ function changeToStructure() {
   $(document.body).addClass('noscroll');
 }
 
+function changeToDeposit() {
+  $("#modal-box").append(`
+    {% include "erc360/deposit.html" %}`);
+  $(document.body).addClass('noscroll');
+}
+
 function changeToEdit() {
   $("#modal-box").append(`
     {% include "erc360/edit.html" %}`);
