smart modal navigation +

--- a/app/templates/erc360/deposit.html
+++ b/app/templates/erc360/deposit.html
@@ -1,5 +1,5 @@
 <div id="deposit-modal" class="modal is-active">
-<div class="modal-background"></div>
+<div class="modal-background to-structure"></div>
 <div class="modal-card noselect">
   <header class="modal-card-head">
       <a class="close button is-info is-inverted" aria-label="close">
@@ -18,8 +18,8 @@
           <select>
             <option>ETH</option>
           </select>
-    </span>
-        </p>
+          </span>
+      </p>
       <p class="control">
         <input id="deposit-amount-input" class="input" type="text" placeholder="Amount to deposit" min="1" max="{{2**256-1}}" maxlength="78">
       </p>
