--- a/app/templates/photo.html
+++ b/app/templates/photo.html
@@ -1,4 +1,4 @@
-<div class="modal is-active">
+<div class="modal is-active" id="photo-modal">
   <div class="modal-background" id="photo-background"></div>
   <div class="modal-content">
   	<div id="photo">
