--- a/app/templates/erc360/create.html
+++ b/app/templates/erc360/create.html
@@ -1,5 +1,5 @@
-<div class="modal is-active">
-<div class="modal-background"></div>
+<div class="modal is-active" id="#create-modal">
+<div class="modal-background to-profile"></div>
 <div class="modal-card noselect">
   <header class="modal-card-head">
       <a class="close button is-info is-inverted" aria-label="close">
