--- a/app/templates/erc360/mint.html
+++ b/app/templates/erc360/mint.html
@@ -1,4 +1,4 @@
-<div class="modal is-active">
+<div class="modal is-active" id="#mint-modal">
 <div class="modal-background"></div>
 <div class="modal-card noselect">
   <header class="modal-card-head">
