--- a/app/templates/erc360/structure.html
+++ b/app/templates/erc360/structure.html
@@ -1,5 +1,5 @@
 <div id="structure-modal" class="modal is-active">
-<div class="modal-background"></div>
+<div class="modal-background to-profile"></div>
 <div class="modal-card noselect">
   <header class="modal-card-head">
       <a class="close button is-info is-inverted" aria-label="close">
@@ -139,7 +139,7 @@
         </p>
         {% if current_user.has_wallet_with_permit(erc360,"0000000000000000000000000000000000000000000000000000000000000000") %}
         <p class="control">
-          <a class="button is-link is-light">
+          <a id="transfer-button" class="button is-link is-light">
             Transfer
           </a>
         </p>
